--- a/html/gitauto.html
+++ b/html/gitauto.html
@@ -10,10 +10,10 @@
     <form>  
         <div class="container">   
             <label>Username : </label>   
-            <input type="text" placeholder="Enter Username" name="username" required>  
+            <input id="user" type="text" placeholder="Enter Username" name="username" required>  
             <label>Password : </label>   
-            <input type="password" placeholder="Enter Password" name="password" required>  
-            <button type="submit">Login</button>   
+            <input id="password" type="password" placeholder="Enter Password" name="password" required>  
+            <button id="sub-btn" type="submit">Login</button>   
             <input type="checkbox" checked="checked"> Remember me   
             <button type="button" class="cancelbtn"> Cancel</button>   
             Forgot <a href="#"> password? </a>   
